# rss_reader

./: .gitignore  Cargo.toml  README.md  RSS_SOURCES.md  init_feeds.ps1  init_feeds.sh  init_feeds_old.sh
.claude/skills/: rss-summary.md
.claude/skills/rss/: SKILL.md
.github/workflows/: ci.yml  release.yml
.sqlx/: query-03ce5bbe22b7d1d1f4eaa17bc0bcca3d81574d3c2be9697509ab29a13bb73b81.json  query-092906f5319970530362e79d9e4112cf30baa51caa1d0e646ac4ff71b85cac83.json  query-308bf5b5d97fce2f7dd17f03a3ea16b9a6148321d16e9ce945b945cfe9e61b8f.json  query-b1ed3365821640ec6110317e3819c0a85a87e0d5229245633614a4533ee15b15.json  query-c9255f5ea74beb61765587a562d7f3809ffb1ad7ae6d08b4ddbf6d2457f0f9e0.json
benches/: search_benchmark.rs
docs/plans/: 2026-03-03-rss-reader-design.md  2026-03-03-rss-reader-implementation.md  2026-03-04-rss-summary-implementation.md  2026-03-04-rss-summary-skill-design.md
migrations/: 20260303000001_init.sql
rss/: 2026-03-26.md  2026-03-28.md  2026-03-30.md  2026-04-01.md  2026-04-03-2.md  2026-04-03.md  2026-04-05.md  2026-04-06.md  2026-04-07.md  2026-04-09.md  2026-04-10.md  2026-04-20.md  2026-04-23.md
src/: lib.rs  main.rs
src/core/: feed_manager.rs  mod.rs
src/db/: articles.rs  feeds.rs  mod.rs  schema.rs  tags.rs
src/fetcher/: http.rs  parser.rs
src/ui/: events.rs  mod.rs  render.rs  state.rs
tests/: db_articles_test.rs  db_feeds_test.rs  db_tags_test.rs  db_test.rs  feed_manager_test.rs  fetcher_test.rs
tests/fixtures/: sample_atom.xml  sample_rss.xml
