[package]
name = "rss-reader"
version = "0.1.0"
edition = "2021"

[lib]
name = "rss_reader"
path = "src/lib.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.36", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
feed-rs = "1.4"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"

[dev-dependencies]
wiremock = "0.6"
criterion = "0.5"
tempfile = "3.10"

[[bench]]
name = "search_benchmark"
harness = false
