[package]
name = "rss-reader"
version = "0.2.5"
edition = "2021"
license = "MIT"
authors = ["RSS Reader Contributors"]
description = "A high-performance TUI RSS reader built with Rust"
repository = "https://github.com/killvxk/rss_reader"
keywords = ["rss", "feed", "reader", "tui", "terminal"]
categories = ["command-line-utilities"]

[lib]
name = "rss_reader"
path = "src/lib.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.36", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
feed-rs = "1.4"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
open = "5.0"
html2text = "0.16.7"
regex = "1.12.3"

[dev-dependencies]
wiremock = "0.6"
criterion = "0.5"
tempfile = "3.10"

[[bench]]
name = "search_benchmark"
harness = false
